2012-12-07  Xavi Artigas  <xartigas@fluendo.com>

	* win32/vs10/libgstfluttml_sdk.vcxproj:
	* win32/vs10/libgstfluttml_sdk.vcxproj.filters:
	  - Update VS project files

2012-12-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/Makefile.am:
	* src/gstttmlspan.c: (gst_ttml_span_compose), (gst_ttml_span_new):
	* src/gstttmlstate.c: (gst_ttml_state_reset):
	* src/gstttmlstate.h:
	* src/gstttmlstyle.c: (gst_ttml_style_reset),
	(gst_ttml_style_free_content), (gst_ttml_style_copy),
	(gst_ttml_style_gen_pango):
	* src/gstttmlstyle.h:
	  - Moved the Style management to its own file, because it is going to
	    get a bit big (Visual Studio files coming next)

2012-12-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_add_characters):
	* src/gstttmlspan.c: (gst_ttml_span_compose), (gst_ttml_span_new):
	* src/gstttmlspan.h:
	  - Support the "color" attribute by generating appropriate Pango markup.

2012-12-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_parse_color_expression),
	(gst_ttml_attribute_parse):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlforward.h:
	* src/gstttmlstate.c: (gst_ttml_state_reset),
	(gst_ttml_state_set_attribute), (gst_ttml_state_get_attribute):
	* src/gstttmlstate.h:
	  - Parse the "color" attribute (Still unused)

2012-12-05  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.h:
	* src/gstttmlevent.h:
	* src/gstttmlforward.h:
	* src/gstttmlspan.h:
	* src/gstttmlstate.h:
	  - Fix forward declaration of types for some strict compilers (like gcc
	    previous to version 4.6)

2012-11-30  Xavi Artigas  <xartigas@fluendo.com>

	* win32/vs10/libgstfluttml_sdk.vcxproj:
	  - Typo in project file

2012-11-30  Xavi Artigas  <xartigas@fluendo.com>

	* win32/vs10/libgstfluttml_sdk.vcxproj:
	* win32/vs10/libgstfluttml_sdk.vcxproj.filters:
	  - Add missing file to VS project to fix Windows build.

2012-11-30  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlutils.h: