@@ -27,7 +27,8 @@ typedef enum _GstTTMLAttributeType {
   GST_TTML_ATTR_FRAME_RATE_MULTIPLIER,
   GST_TTML_ATTR_WHITESPACE_PRESERVE,
   GST_TTML_ATTR_SEQUENTIAL_TIME_CONTAINER,
-  GST_TTML_ATTR_COLOR
+  GST_TTML_ATTR_COLOR,
+  GST_TTML_ATTR_BACKGROUND_COLOR
 } GstTTMLAttributeType;
 
 /* Event types */
