@@ -80,6 +80,9 @@ gst_ttml_state_set_attribute (GstTTMLState *state,
     case GST_TTML_ATTR_COLOR:
       state->style.color = attr->value.color;
       break;
+    case GST_TTML_ATTR_BACKGROUND_COLOR:
+      state->style.background_color = attr->value.color;
+      break;
     default:
       GST_DEBUG ("Unknown attribute type %d", attr->type);
       break;
@@ -156,6 +159,9 @@ gst_ttml_state_get_attribute (GstTTMLState *state,
       break;
     case GST_TTML_ATTR_COLOR:
       attr->value.color = state->style.color;
+      break;
+    case GST_TTML_ATTR_BACKGROUND_COLOR:
+      attr->value.color = state->style.background_color;
       break;
     default:
       GST_DEBUG ("Unknown attribute type %d", attr->type);
